<resources>
    <string name="app_name">EZ-Store</string>
    <string name="NoInternet">Opps .. There\'s no internet connection</string>
    <string name="LoginSplash">Login</string>
    <string name="RegisterSplash">Register</string>
    <string name="Password">Password</string>
    <string name="Email">Email</string>
    <string name="LoginButton">Login</string>
    <string name="RememberMeText">Remember Me</string>
    <string name="Forgot">Forgot Email/Password ?</string>
    <string name="PhoneText">Phone</string>
    <string name="Use">Use :</string>
    <string name="Name">Name</string>
    <string name="ConfirmPassword">Confirm Password</string>
    <string name="RegisterButton">Register</string>
    <string name="EmptyField">This field is required</string>
    <string name="PasswordDoesntMatch">Password doesn\'t match</string>
    <string name="Owner">Owner</string>
    <string name="Employee">Employee</string>
    <string name="SelectRole">Select your role (admin / employee)</string>
    <string name="Resend">Resend</string>
    <string name="codeVerificationButton">Verify Code</string>
    <string name="EnterCodeText">Enter the code sent on</string>
    <string name="wrongPhone">isn\'t your phone number ?</string>
    <string name="SendCode">Send Code</string>
    <string name="verificationCompleted">Verification Completed</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="signedOut">Signed out successfully</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_myProfile">My Profile</string>
    <string name="menu_termsAndConditions">Terms and Conditions</string>
    <string name="menu_help">Help</string>
    <string name="menu_rate">Rate Us !</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_employee">Add Employee</string>

    <string name="descriptionFood">String</string>


    <string name="home_explanation">
        This is a sample payment app. Use the SampleMerchant web site to initiate a transaction.
    </string>
    <string name="total_format">Total: %s %s</string>
    <string name="payment_explanation">
        This is a sample payment app, and no actual payment will be processed.
    </string>
    <string name="pay">Pay</string>
    <string name="error_caller_not_chrome">The caller is not Chrome.</string>
    <string name="chrome_stable_fingerprint" translatable="false">F0:FD:6C:5B:41:0F:25:CB:25:C3:B5:33:46:C8:97:2F:AE:30:F8:EE:74:11:DF:91:04:80:AD:6B:2D:60:DB:83</string>
    <string name="chrome_beta_fingerprint" translatable="false">DA:63:3D:34:B6:9E:63:AE:21:03:B4:9D:53:CE:05:2F:C5:F7:F3:C5:3A:AB:94:FD:C2:A2:08:BD:FD:14:24:9C</string>
    <string name="chrome_dev_fingerprint" translatable="false">90:44:EE:5F:EE:4B:BC:5E:21:DD:44:66:54:31:C4:EB:1F:1F:71:A3:27:16:A0:BC:92:7B:CB:B3:92:33:CA:BF</string>
    <string name="chrome_canary_fingerprint" translatable="false">20:19:DF:A1:FB:23:EF:BF:70:C5:BC:D1:44:3C:5B:EA:B0:4F:3F:2F:F4:36:6E:9A:C1:E3:45:76:39:A2:4C:FC</string>
    <string name="chromium_fingerprint" translatable="false">32:A2:FC:74:D7:31:10:58:59:E5:A8:5D:F1:6D:95:F1:02:D8:5B:22:09:9B:80:64:C5:D8:91:5C:61:DA:D1:E0</string>
    <string name="your_full_name">Your Full Name</string>
    <string name="your_phone_number">Your Phone Number</string>
    <string name="your_email_address">Your Email Address</string>
    <string name="payment_response">paymentActivityResponse</string>
    <string name="title_activity_payment_details_update">PaymentDetailsUpdate</string>
    <string name="us_address">US address</string>
    <string name="canada_address">Canadian Address</string>
    <string name="uk_address">British Address</string>
    <string name="contact_information">Contact Information:</string>
    <string name="submit">Submit</string>
    <string name="promotion_code">Enter a Valid Code: e.g. 123</string>
    <string name="promotion_title">Promotion Code:</string>

    <string name="title_activity_unsellable__items">Unsellable_Items</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>


    <string name="name">Name :</string>
    <string name="Change">Apply Changes</string>
    <string name="new_password">New Password</string>
    <string name="your_permissions">Your Permissions</string>
    <string name="you_don_t_have_any_permission">You don\'t have any permission</string>

</resources>