<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/lightYellow"
        tools:context=".View.ui.MyProfileFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/profile_background">

            <ImageView
                android:id="@+id/profile_pic"
                android:layout_width="125dp"
                android:layout_height="125dp"
                android:src="@drawable/user_profile"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.026" />

            <ImageView
                android:id="@+id/choose_pic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/gallery_icon"
                app:layout_constraintBottom_toBottomOf="@+id/profile_pic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.650"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />

            <ImageView
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/on_back_animation"
                app:layout_constraintBottom_toBottomOf="@+id/profile_pic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.043"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.164" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profile_pic"
                app:layout_constraintVertical_bias="0.2">

                <LinearLayout
                    android:paddingTop="30dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_weight="1"
                        android:paddingStart="10dp"
                        android:textSize="16sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Username: "
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/username_text"
                        android:layout_weight="0.7"
                        android:textSize="16sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="username" />

                    <EditText
                        android:id="@+id/username_editText"
                        android:visibility="gone"
                        android:layout_weight="0.7"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="username: " />

                    <ImageView
                        android:id="@+id/edit_username"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/edit_stick" />
                </LinearLayout>

                <LinearLayout
                    android:paddingTop="30dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_weight="1"
                        android:paddingStart="10dp"
                        android:textSize="16sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Email: "
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/email_text"
                        android:layout_weight="0.7"
                        android:textSize="16sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="email" />

                    <EditText
                        android:id="@+id/email_edit_text"
                        android:visibility="gone"
                        android:layout_weight="0.7"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="username: " />

                    <ImageView
                        android:id="@+id/edit_email"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/edit_stick" />
                </LinearLayout>

                <LinearLayout
                    android:paddingTop="30dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_weight="1"
                        android:paddingStart="10dp"
                        android:textSize="16sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Phone: "
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/phone_text"
                        android:layout_weight="0.7"
                        android:textSize="16sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="+962*******" />

                    <LinearLayout
                        android:id="@+id/phone_layout"
                        android:layout_weight="0.7"
                        android:visibility="gone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <com.hbb20.CountryCodePicker
                            android:id="@+id/CountryCode"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginEnd="5dp"
                            android:gravity="center"
                            android:textDirection="rtl"
                            app:ccp_autoDetectCountry="false"
                            app:ccp_contentColor="@color/black"
                            app:ccp_defaultPhoneCode="962"
                            app:ccp_showNameCode="true"
                            app:ccp_textSize="@dimen/EmailText" />

                        <EditText
                            android:id="@+id/phone_editText"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:ems="10"
                            android:hint="@string/PhoneText"
                            android:inputType="phone"
                            android:paddingLeft="15dp"
                            android:textSize="@dimen/EmailText" />
                    </LinearLayout>

                    <ImageView
                        android:id="@+id/edit_phone"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/edit_stick" />
                </LinearLayout>

                <LinearLayout
                    android:paddingTop="30dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_weight="1"
                        android:paddingStart="10dp"
                        android:textSize="16sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Password: "
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/password_text"
                        android:layout_weight="0.7"
                        android:textSize="16sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="**********" />

                    <LinearLayout
                        android:id="@+id/password_layout"
                        android:visibility="gone"
                        android:layout_weight="0.7"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <EditText
                            android:id="@+id/password_editText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="password " />

                        <EditText
                            android:id="@+id/confirmPassword_editText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="confirm password " />
                    </LinearLayout>

                    <ImageView
                        android:id="@+id/edit_password"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/edit_stick" />
                </LinearLayout>

                <LinearLayout
                    android:paddingTop="30dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_weight="1"
                        android:paddingStart="10dp"
                        android:textSize="16sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Role: "
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/role_text"
                        android:layout_weight="0.7"
                        android:textSize="16sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Employee" />

                    <RadioGroup
                        android:id="@+id/radioGroup"
                        android:visibility="gone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.7">

                        <RadioButton
                            android:id="@+id/owner_radioButton"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/Owner" />

                        <RadioButton
                            android:id="@+id/employee_radioButton"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/Employee" />
                    </RadioGroup>

                    <ImageView
                        android:id="@+id/edit_role"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/edit_stick" />
                </LinearLayout>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
</layout>